@@ -18,6 +18,7 @@ repositories {
     maven {
         url uri('../../repo')
     }
+    maven { url 'https://jitpack.io' }
     maven { url 'https://maven.aliyun.com/repository/public/' }
     mavenCentral()
 }
@@ -28,6 +29,8 @@ patchPluginXml{
 dependencies {
     implementation project(":base")
     implementation project(":zircon")
+    annotationProcessor project(":javac")
+    implementation 'com.github.122006:ExMethodUtil:1.1.1'
 }
 //IU-202.7319.50
 intellij  {
@@ -35,3 +38,26 @@ intellij  {
     version = "2023.3"
     type = "IC"
 }
+tasks.withType(JavaCompile) {
+    it.options.compilerArgs << "-Xplugin:ZrExMethod"
+    it.options.compilerArgs << "-Xplugin:ZrString"
+    it.options.fork = true
+    if (Integer.parseInt(System.getProperty("java.version").split("\\.")[0]) >= 11) {
+        it.options.forkOptions.jvmArgs
+                << "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+                << "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
+                << "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
+                << "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
+                << "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"
+                << "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"
+                << "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
+                << "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
+                << "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"
+                << "--add-opens=jdk.compiler/com.sun.tools.javac.code.Types=ALL-UNNAMED"
+                << "--add-opens=jdk.compiler/com.sun.tools.javac.code.Names=ALL-UNNAMED"
+                << "--add-opens=jdk.compiler/com.sun.tools.javac.code.Symtab=ALL-UNNAMED"
+                << "--add-opens=jdk.compiler/com.sun.tools.javac.processing.JavacProcessingEnvironment=ALL-UNNAMED"
+        it.options.fork = true
+    }
+}
+
